--- a/src/annoying.client/Pages/Index.cshtml
+++ b/src/annoying.client/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>K8s is a bit of a pain</a>.</p>
+    <p>K8s is a bit of a pain at @Model.NowTime </a>.</p>
 </div>
